--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,35 +1,32 @@
 {
   "schemaVersion": "1.0.0",
   "projectStateVersion": 3,
-  "summary": "Project now includes a plushie-focused AI assistant feature (chat box) using on-device/scripted logic (no external AI integrations).",
-  "architectural_notes": [
-    "Plushie assistant must use on-device/scripted logic only (no external AI integrations).",
-    "User interaction for plushie assistant is a chat box UI."
-  ],
+  "summary": "Build a member image gallery where logged-in users can upload, view, and delete their own images.",
+  "architectural_notes": [],
   "known_issues": [],
   "isFixRequest": false,
   "existing_features": [
     {
-      "id": "feature-add-a-new-dedicated-plushie-assistant-chat-page-that-users-can-access-from-the-main-navigation-implemented-as-an-on-device-scripted-chat-box-no-external-ai-integrations",
-      "title": "Add a new dedicated \"Plushie Assistant\" chat page that users can access from the main navigation, implemented as an on-device/scripted chat box (no external AI integrations).",
-      "reqIds": [
-        "REQ-1"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-implement-the-plushie-assistant-s-scripted-conversation-logic-so-it-can-1-answer-plushie-related-facts-care-questions-2-recommend-plushies-based-on-user-preferences-3-generate-short-plushie-stories-and-4-maintain-a-consistent-friendly-plushie-themed-personality",
-      "title": "Implement the plushie assistant’s scripted conversation logic so it can: (1) answer plushie-related facts/care questions, (2) recommend plushies based on user preferences, (3) generate short plushie stories, and (4) maintain a consistent friendly plushie-themed personality.",
-      "reqIds": [
-        "REQ-2"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-add-basic-chat-ux-safeguards-and-state-handling-for-the-assistant-empty-input-prevention-simple-session-history-persistence-on-the-device-and-a-clear-chat-action",
-      "title": "Add basic chat UX safeguards and state handling for the assistant: empty-input prevention, simple session history persistence on the device, and a \"Clear chat\" action.",
+      "id": "feature-frontend-provide-a-gallery-page-that-lists-gallery-media-items-and-allows-authenticated-members-to-upload-new-media-image-or-video-with-optional-title-and-description",
+      "title": "Frontend: Provide a gallery page that lists gallery media items and allows authenticated members to upload new media (image or video) with optional title and description.",
       "reqIds": [
         "REQ-3"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-frontend-allow-members-to-delete-their-own-uploaded-gallery-media-items-from-both-the-gallery-grid-and-the-lightbox-view-with-a-confirmation-dialog-and-clear-success-error-feedback",
+      "title": "Frontend: Allow members to delete their own uploaded gallery media items from both the gallery grid and the lightbox view, with a confirmation dialog and clear success/error feedback.",
+      "reqIds": [
+        "REQ-4"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-frontend-backend-integration-ensure-the-gallery-list-and-delete-upload-mutations-are-wired-through-react-query-so-the-gallery-view-remains-consistent-after-changes-upload-delete-and-handles-actor-availability-authentication-transitions-gracefully",
+      "title": "Frontend/Backend integration: Ensure the gallery list and delete/upload mutations are wired through React Query so the gallery view remains consistent after changes (upload/delete) and handles actor availability/authentication transitions gracefully.",
+      "reqIds": [
+        "REQ-5"
       ],
       "version": 1
     }
@@ -37,13 +34,29 @@
   "new_feature_requests": [
     {
       "id": "AR-1",
-      "summary": "Add plushie assistant bot via chat box that can answer plushie facts, recommend plushies, generate stories, and have a personality (on-device/scripted; no external AI integrations).",
+      "summary": "Member image gallery: logged-in users can upload, view, and delete their own images",
       "reqIds": [],
-      "status": "in_progress"
+      "status": "pending"
+    },
+    {
+      "id": "AR-2",
+      "summary": "Backend: Ensure authenticated members can add gallery media items (image or video) with optional title/description, and store the item's author so ownership can be enforced later.",
+      "reqIds": [
+        "REQ-1"
+      ],
+      "status": "pending"
+    },
+    {
+      "id": "AR-3",
+      "summary": "Backend: Enforce deletion permissions so that only the original author of a gallery media item (or an admin) can delete it.",
+      "reqIds": [
+        "REQ-2"
+      ],
+      "status": "pending"
     }
   ],
   "gameProjectType": "none",
-  "projectName": "Plushie Pal",
+  "projectName": "Member Gallery",
   "clarification_mode": "instant",
   "clarification_rounds": 0
 }
