--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,24 +1,16 @@
 {
   "schemaVersion": "1.0.0",
   "projectStateVersion": 3,
-  "summary": "New project",
+  "summary": "Caffeine app with external link integration",
   "architectural_notes": [],
   "known_issues": [],
   "isFixRequest": false,
   "existing_features": [
     {
-      "id": "feature-remove-the-community-section-from-the-homepage-component-including-any-navigation-links-hero-text-or-call-to-action-buttons-that-reference-the-community-board",
-      "title": "Remove the community section from the HomePage component, including any navigation links, hero text, or call-to-action buttons that reference the community board",
+      "id": "feature-add-a-navigation-link-or-button-that-opens-https-reflect-and-create-lovable-app-in-a-new-tab",
+      "title": "Add a navigation link or button that opens https://reflect-and-create.lovable.app/ in a new tab",
       "reqIds": [
         "REQ-1"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-remove-the-gallery-section-from-the-homepage-component-including-any-navigation-links-hero-text-or-call-to-action-buttons-that-reference-the-gallery",
-      "title": "Remove the gallery section from the HomePage component, including any navigation links, hero text, or call-to-action buttons that reference the gallery",
-      "reqIds": [
-        "REQ-2"
       ],
       "version": 1
     }
@@ -26,12 +18,12 @@
   "new_feature_requests": [
     {
       "id": "AR-1",
-      "summary": "Remove community and gallery sections from homepage",
+      "summary": "Add link to external Lovable app (https://reflect-and-create.lovable.app/)",
       "reqIds": [],
       "status": "pending"
     }
   ],
-  "projectName": "Remove community and gallery sections from homepage",
+  "projectName": "Plushie Haven",
   "clarification_mode": "instant",
   "clarification_rounds": 0
 }
